ADD documentacion alertas
